<resources>
    <string name="app_name">Shiny</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="click_here">Click Here</string>
    <string name="carwash_store">CarWash Store?</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="log_in_as_a_store">Log in as a store</string>
    <string name="not_a_provider_yet">Not a provider yet?</string>
    <string name="apply_now">Apply Now</string>
    <string name="not_a_provider">Not a Provider?</string>
    <string name="register_as_a_store">Register as a store</string>
    <string name="store_name">Store Name</string>
    <string name="apply">Apply</string>
    <string name="store_profile">STORE PROFILE</string>
    <string name="location">Location</string>
    <string name="update_information">Update Information</string>
    <string name="title_activity_store_maps" translatable="false">StoreMapsActivity</string>
    <string name="log_out">Log out</string>
    <string name="more">More</string>
    <string name="ex_waxing_regular_wash">e.g. Waxing, Regular Wash</string>
    <string name="price">Price</string>
    <string name="duration">Duration</string>
    <string name="optional">Optional</string>
    <string name="service_title">Service Title:</string>
    <string name="add_service">Add service</string>
    <string name="turn_on_if_you_would_like_the_service_to_be_seen_by_customers">turn on if you would like the service to be seen by customers</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="service_availability">Service Availability</string>
    <string name="minutes">minutes</string>
    <string name="sar">SAR</string>
    <string name="confirm">Confirm</string>
    <string name="previous">Previous</string>
    <string name="reschedule">Reschedule</string>
    <string name="back">Back</string>
    <string name="my_services">My Services</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="client_name">Client Name:</string>
    <string name="appointment_details">Appointment Details</string>
    <string name="ali_alatyeah">Ali Alatyeah</string>
    <string name="received">RECEIVED</string>
    <string name="appointments">Appointments</string>
    <string name="stores">Stores</string>
    <string name="preview">Preview</string>
    <string name="ali" translatable="false">Ali</string>
    <string name="confirm_store_location">Confirm store Location</string>
    <string name="search">search</string>
    <string name="profile">Profile</string>
    <string name="darkMode">Dark Mode</string>
    <string name="language">Change Language</string>
    <string name="contact">Send Feedback</string>
    <string name="shareApp">Share App</string>
    <string name="logOut">Log Out</string>
    <string name="log_outt">Log Out?</string>
    <string name="share_app">Hey check out Shiny where you could schedule your appointments for your car wash, you could download it  at</string>
    <string name="feedBack">Send Feedback</string>
    <string name="night_mode">Dark Mode</string>
    <string name="log_out_message">Are you sure you want to log out?</string>
    <string name="dark_mode_message">Choose app mode</string>
    <string name="language_message">Choose app language</string>
    <string name="arabic" translatable="false">العربية</string>
    <string name="english" translatable="false">English</string>
    <string name="day_mode">Light Mode</string>
    <string name="pending">Pending</string>
    <string name="done">Done</string>
    <string name="cancelled">Cancelled</string>
    <string name="Shiny_support">Customer Service</string>
    <string name="pick_slot">Pick Slot</string>
    <string name="service">Service</string>
    <string name="notify_me">Notify me</string>
    <string name="notification_alert_title">Notification Scheduled</string>
    <string name="notification_message">Hey you have an upcoming appointment</string>
    <string name="SHINY">shiny_app</string>
    <string name="mark_done">MARK DONE</string>
    <string name="change_status">Change Status</string>
    <string name="map_action_bar">Choose Location</string>
    <string name="min">min</string>
    <string name="regular_wash">regular wash</string>
    <string name="next">Next</string>
    <string name="select_service">Select Service:</string>
    <string name="back_button">Back Button</string>
    <string name="uncompleted_task">uncompleted task</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="received_message">Do you want to mark this appointment as Done?</string>
    <string name="not_received_message">Do you want to mark this appointment as Unattended?</string>
    <string name="Delete_Service">Delete Service</string>
    <string name="delete_service_message">Do you want to delete this service? You colud make it unavialeble instead.</string>
    <string name="appointment_is_confirmed">Appointment Is Confirmed</string>
    <string name="appointment_is_rescheduled">Appointment Is Rescheduled</string>
    <string name="login_fail_message">incorrect email or password</string>
    <string name="unattended">Unattended</string>
    <string name="empty_state_user_orders_message">You have no appointments, browse stores to schedule an appointment</string>
    <string name="no_upcoming_appointments">No upcoming appointments</string>
    <string name="no_past_appointments">No past appointments</string>
    <string name="no_service_message">You have no services, press the add button below to add new service</string>
    <string name="no_stores_message">No stores around you, please try later</string>
    <string name="services">Services</string>
    <string name="info_updated">Info Updated Successfully</string>
    <string name="err_mssge">Error, try later please</string>
    <string name="mark_unattended">Mark Unattended</string>


</resources>